# rtc-example

./: .gitignore  BCB_notes  CMakeLists.txt  README.md  baldr_config.json  bmc_DM_default_config.json  camera_config.json  conanfile.py  cred1_camera_default_config.json  cred3_camera_default_config.json  cred3_script_test.py  darks.py  example.py  fakecam_4dm_script_test.py  init_rtc.py  just_dms_config.json  justfile  latency_test_example.py  load_script.py  playground.py  pyproject.toml  rtc_calibration_example.py  rtc_configuration_tests.py  rtc_example.py  run_rtc_forMike.py  script_test.py  script_test_fli.py  spiral_search_dm.py  syd_July.py  syd_rtc_play.py  test-config.json  test_benrtc_config.json  test_gui.py  test_gui_2.py  test_gui_2.py~  test_gui_3.py  tests.py
.devcontainer/: Dockerfile
DMShapes/: Crosshair140.csv  four_torres.csv  four_torres_2.csv  waffle.csv
include/: push_record.hpp  span_cast.hpp  updatable.hpp
playground/: playground.py  rtc_example.py  (+1 more)
python/: CMakeLists.txt  conanfile.py
python/baldr/: __init__.py
python/baldr/sardine/: __init__.py  main.py
python/baldr/sardine/url/: __init__.py
python/sardine/url/: __init__.py
python/src/: _baldr.cpp
python/src/baldr/: _baldr.cpp
python/src/sardine/: _sardine.cpp  buffer.cpp  context.cpp  managed.cpp  semaphore.cpp  url.cpp
python/src/sardine/region/: device.cpp  host.cpp
tplib/sardine/: .gitignore  CMakeLists.txt  conanfile.py  justfile  pyproject.toml  test.py
tplib/sardine/.cache/clangd/index/: base.hpp.636F6EE53BBCCEF1.idx  base.hpp.7403EEEE086F7F28.idx  cache.hpp.E97ED919AC790A05.idx  concepts.hpp.2E5301CA45F5F739.idx  device.hpp.619330DB5C678EF6.idx  error.cpp.3D42BC07F5E3AF58.idx  error.hpp.DCD41F056DF9870E.idx  fwd.hpp.E0B04D9D1E5B146F.idx  host.cpp.2402C25CEB6642FA.idx  host.hpp.EDFDEB55A2234FBD.idx  interface.hpp.8049772415E40135.idx  json.cpp.754D8FABC5D66C67.idx  json.hpp.818687947D4CBA03.idx  local.cpp.14248E9D9DD02E5F.idx  local.hpp.E85521BD1ACF16DA.idx  managed.hpp.7A3AF6FF7D622BCF.idx  manager.cpp.41CB56389AC94E86.idx  manager.hpp.BE68102AEC502629.idx  memory_converter.cpp.AFD7606B0FF0EADB.idx  memory_converter.hpp.AC194BC5CC7ADEAA.idx  ring.hpp.7E40DB886BF4D016.idx  type.hpp.EBEB362D093F763F.idx  url.cpp.B713A8CD87236382.idx  url.cpp.D6850392359DB0D2.idx  url.hpp.0497F36A38ED791B.idx  url.hpp.AF504343D632E4B5.idx  utility.hpp.8F95C62488932CD3.idx  utility.hpp.C44ACB8767965C6D.idx  utility.hpp.FDBDA3A942814C6D.idx  view_mapper.hpp.05DA208DDBB7DAB2.idx
tplib/sardine/cuda/include/sardine/cuda/python/: mapper.hpp
tplib/sardine/cuda/src/lib/: device.cpp
tplib/sardine/cuda/src/lib/device/: memory_converter.cpp
tplib/sardine/cuda/src/python/: _sardinecuda.cpp
tplib/sardine/example/include/node/: axpy.hpp
tplib/sardine/include/sardine/: buffer.hpp  concepts.hpp  config.hpp  context.hpp  error.hpp  fwd.hpp  json.hpp  load.hpp  logger.hpp  mapper.hpp  mapping_descriptor.hpp  memory_converter.hpp  region_register.hpp  sardine.hpp  semaphore.hpp  type.hpp  url.hpp  utility.hpp
tplib/sardine/include/sardine/buffer/: base.hpp  impl.hpp  interface.hpp  ring.hpp  utility.hpp
tplib/sardine/include/sardine/mapper/: base.hpp  mapper_base.hpp
tplib/sardine/include/sardine/mapping_descriptor/: base.hpp  interface.hpp
tplib/sardine/include/sardine/python/: dtype.hpp  managed_helper.hpp  mapper.hpp  url_helper.hpp
tplib/sardine/include/sardine/python/cast/: json.hpp  url.hpp
tplib/sardine/include/sardine/region/: embedded.hpp  host.hpp  local.hpp  managed.hpp
tplib/sardine/include/sardine/region/cuda/: device.hpp
tplib/sardine/include/sardine/region/cuda/device/: utility.hpp
tplib/sardine/include/sardine/region/host/: manager.hpp  utility.hpp
tplib/sardine/include/sardine/region/managed/: manager.hpp  utility.hpp
tplib/sardine/include/sardine/region/milk/array/: cacao.h
tplib/sardine/include/sardine/region/milk/array/detail/: type.h  utility.h
tplib/sardine/include/sardine/region/milk/array/shm/: error.h  handle.h  handle_managed.h
tplib/sardine/include/sardine/region/milk/parameter/: fps.hpp
tplib/sardine/include/sardine/region/milk/parameter/shm/: error.hpp
tplib/sardine/include/sardine/type/: json.hpp  url.hpp
tplib/sardine/include/sardine/utility/sync/: barrier.hpp  spin_lock.hpp
tplib/sardine/milk/: CMakeLists.txt
tplib/sardine/milk/include/sardine/milk/: array.hpp  error.hpp  type.hpp
tplib/sardine/milk/include/sardine/milk/array/detail/: utility.hpp
tplib/sardine/milk/include/sardine/milk/array/shm/: handle.hpp
tplib/sardine/milk/src/lib/: array.cpp
tplib/sardine/milk/src/lib/array/shm/: handle.cpp
tplib/sardine/milk/src/python/: _sardinemilk.cpp  array.cpp
tplib/sardine/python/: CMakeLists.txt  conanfile.py
tplib/sardine/python/sardine/: __init__.py
tplib/sardine/python/sardine/managed/: __init__.py
tplib/sardine/python/sardine/url/: __init__.py
tplib/sardine/python/src/: managed.cpp  url.cpp
tplib/sardine/src/: cache.cpp  error.cpp  ipc_test.cpp  memory_converter.cpp  url.cpp
tplib/sardine/src/buffer/: ring.cpp
tplib/sardine/src/lib/: error.cpp  memory_converter.cpp  region_register.cpp  sink.cpp  url.cpp
tplib/sardine/src/lib/region/: embedded.cpp
tplib/sardine/src/lib/utility/sync/: barrier.cpp
tplib/sardine/src/python/: _sardine.cpp  buffer.cpp  context.cpp  json.cpp  managed.cpp  url.cpp
tplib/sardine/src/python/region/: host.cpp
tplib/sardine/src/python/utility/: sync.cpp
tplib/sardine/src/region/: host.cpp  local.cpp  managed.cpp
tplib/sardine/src/region/cuda/: device.cpp
tplib/sardine/src/region/cuda/device/: manager.cpp  memory_converter.cpp
tplib/sardine/src/region/host/: manager.cpp
tplib/sardine/src/region/managed/: manager.cpp
tplib/sardine/src/sardine/: __init__.py  host.py
tplib/sardine/src/sardine/milk/: __init__.py
tplib/sardine/src/sardine/url/: url.py
tplib/sardine/src/type/: url.cpp
tplib/sardine/test/: CMakeLists.txt  sardinetest
tplib/sardine/test/src/: box_test.cpp  cache_test.cpp  main.cpp  mapping_test.cpp  producer_consumer_test.cpp  url_test.cpp
(+205 files in other folders)
