[project]
name = "rtc"
version = "0.0.1"
description = "A brief description of what this project does"
license = {text = "MIT License"}
# readme = "README.md"
requires-python = ">=3.8"
authors = [ {name = "Julien Bernard", email = "raplonu.jb@gmail.com"}, ]

# Optional: runtime dependency specification
dependencies = [ "numpy" ]

[project.urls]
Homepage = "https://maggot.anu.edu.au/jbernard/rtc_example"

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "cmake >=3.27"]
# and maybe conan but it requires some configuration...

build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
# wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
CMAKE_CXX_COMPILER = "g++-11" #/usr/bin/

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# # Run pytest to ensure that the package was correctly built
# test-command = "pytest {project}/tests"
# test-requires = "pytest"
